update ngApp dependencies

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
-<script src="/bower_components/angular-chart.js/dist/angular-chart.js"></script>
-<script src="/bower_components/chart.js/Chart.min.js"></script>
+<script src="/bower_components/chart.js/dist/Chart.min.js"></script>
+<script src="/bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.min.js"></script>
